[gd_scene load_steps=24 format=2]

[ext_resource path="res://assets/graphics/icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/Rat.gd" type="Script" id=2]
[ext_resource path="res://scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://assets/graphics/rat/szczurprawolewao.png" type="Texture" id=4]
[ext_resource path="res://assets/graphics/rat/szczurdupka.png" type="Texture" id=5]
[ext_resource path="res://assets/graphics/rat/przod.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 2048, 2048 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2048, 0, 2048, 2048 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 4096, 0, 2048, 2048 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 6144, 0, 2048, 2048 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 8192, 0, 2048, 2048 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 10240, 0, 2048, 2048 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 2048, 2048 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2048, 0, 2048, 2048 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 4096, 0, 2048, 2048 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 6144, 0, 2048, 2048 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 8192, 0, 2048, 2048 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 2048, 2048 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 2048, 0, 2048, 2048 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 4096, 0, 2048, 2048 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 6144, 0, 2048, 2048 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "down",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 39.25, 39.5 )

[node name="Rat" type="Node2D"]
script = ExtResource( 2 )

[node name="Player" type="KinematicBody2D" parent="."]
script = ExtResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="Player"]
modulate = Color( 0.0784314, 1, 0, 1 )
position = Vector2( 5.83328, -42.8855 )
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 17 )
animation = "left"

[node name="ref_l" type="Sprite" parent="Player"]
modulate = Color( 0.941176, 0.0196078, 0.0196078, 0.482353 )
position = Vector2( -288.776, 0 )
scale = Vector2( 1.484, 1.484 )
texture = ExtResource( 1 )

[node name="ref_r" type="Sprite" parent="Player"]
modulate = Color( 0, 0.156863, 1, 0.403922 )
position = Vector2( 285, 0 )
scale = Vector2( 1.484, 1.484 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )

[node name="action-colision" type="Area2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/action-colision"]
shape = SubResource( 1 )

[node name="up" type="RayCast2D" parent="Player/action-colision"]
enabled = true
cast_to = Vector2( 0, -60 )
collision_mask = 2

[node name="down" type="RayCast2D" parent="Player/action-colision"]
enabled = true
cast_to = Vector2( 0, 60 )
collision_mask = 2

[node name="right" type="RayCast2D" parent="Player/action-colision"]
enabled = true
cast_to = Vector2( 60, 0 )
collision_mask = 2

[node name="left" type="RayCast2D" parent="Player/action-colision"]
enabled = true
cast_to = Vector2( -60, 0 )
collision_mask = 2

[node name="cam" type="Camera2D" parent="."]
rotating = true
current = true

[node name="Tween" type="Tween" parent="."]

[connection signal="area_entered" from="Player/action-colision" to="." method="_on_actioncolision_area_entered"]
[connection signal="area_exited" from="Player/action-colision" to="." method="_on_actioncolision_area_exited"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="tween_started" from="Tween" to="." method="_on_Tween_tween_started"]
